# http-server-spec-workflow-ci-example

./: LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: http-spec.yml
